--- a/css/tokens.css
+++ b/css/tokens.css
@@ -252,7 +252,6 @@
   --side-nav-max-height: 2000px;
   --side-nav-item-width: 272px;
   --side-nav-item-height: 40px;
-  --side-nav-grand-parent-item-height: 48px;
 
   /* ───────── TABS ───────── */
   /* Figma Dimensions-DS/Tabs */
